--- a/WPF_MVVM_UI/App.xaml
+++ b/WPF_MVVM_UI/App.xaml
@@ -2,12 +2,24 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:WPF_MVVM_UI"
+             xmlns:viewModel="clr-namespace:WPF_MVVM_UI.MVVM.ViewModel"
+             xmlns:view="clr-namespace:WPF_MVVM_UI.MVVM.View"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="Theme/MenuButtonTheme.xaml"/>
+                <ResourceDictionary Source="Theme/TextboxTheme.xaml"/>
             </ResourceDictionary.MergedDictionaries>
+
+            <DataTemplate DataType="{x:Type viewModel:HomeViewModel}">
+                <view:HomeView/>
+            </DataTemplate>
+
+            <DataTemplate DataType="{x:Type viewModel:ProductViewModel}">
+                <view:ProductView/>
+            </DataTemplate>
+
         </ResourceDictionary>
          
     </Application.Resources>
