--- a/WPF_MVVM_UI/MainWindow.xaml
+++ b/WPF_MVVM_UI/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WPF_MVVM_UI"
+        xmlns:viewModel="clr-namespace:WPF_MVVM_UI.MVVM.ViewModel"
         mc:Ignorable="d"
         Title="MainWindow" 
         Height="600" Width="920"
@@ -12,6 +13,10 @@
         Background="Transparent"
         AllowsTransparency="True">
 
+    <Window.DataContext>
+        <viewModel:MainViewModel/>
+    </Window.DataContext>
+    
     <Border Background="#272537"
             CornerRadius="10">
         <Grid>
@@ -25,7 +30,7 @@
                 <RowDefinition/>
             </Grid.RowDefinitions>
 
-            <TextBlock Text="Elysian"
+            <TextBlock Text="Elfenheim"
                        VerticalAlignment="Center"
                        HorizontalAlignment="Left"
                        Foreground="White"
@@ -37,12 +42,15 @@
                              Height="50"
                              Foreground="White"
                              FontSize="14"
-                             Style="{StaticResource MenuButtonTheme}"/>
+                             Style="{StaticResource MenuButtonTheme}"
+                             IsChecked="True"
+                             Command="{Binding HomeViewCommand}"/>
                 <RadioButton Content="Products"
                              Height="50"
                              Foreground="White"
                              FontSize="14"
-                             Style="{StaticResource MenuButtonTheme}"/>
+                             Style="{StaticResource MenuButtonTheme}"
+                             Command="{Binding ProductViewCommand}"/>
                 <RadioButton Content="Feature"
                              Height="50"
                              Foreground="White"
@@ -60,7 +68,13 @@
                        VerticalContentAlignment="Center"
                        HorizontalAlignment="left"
                        Margin="5"
-                       Grid.Column="1"/>
+                       Grid.Column="1"
+                     Style="{StaticResource ModernTextbox}"/>
+
+            <ContentControl Grid.Row="1"
+                            Grid.Column="1"
+                            Margin="10"
+                            Content="{Binding currentView}"/>
 
         </Grid>
 
